k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mfe-shell
  labels:
    app.kubernetes.io/part-of: wecoya-platform
    app.kubernetes.io/managed-by: argocd
